app/components/signup-form/signup-form.scss
.singup-form-cmp {
    text-align: center;
    color: #232D46;
    font-weight: 300;
    padding-bottom: 3%;
    .container {
        padding-top: 2%;
    }
    h3 {
        font-size: 20px;
    }
    p {
        font-size: 18px;
    }
    select {
        width: 40%;
        margin: auto;
    }
    button {
        background-color: #232D46;
        color: white;
        border: none;
        width: 180px;
        height: 45px;
        font-size: 24px;
        margin-top: 13%;
        cursor: pointer;
    }

    .signup {
        //position: absolute;
        width: 100%;
        float: left;

        .close {
            background: url("../../../assets/img/register/close.png") no-repeat 7px 7px;
            margin-top: 0;
            width: 90px;
        }

        input {
            width: 20%;
            margin: auto;
            background-color: #E8E8E8;
        }
        
        h2 {
            color: #1BAF8F;
        }
        
        #email {
            background: url("../../../assets/img/register/mail-icon.png") no-repeat scroll 7px 7px;
            padding: 0px 15px;
        }

        #password {
            background: url("../../../assets/img/register/pass-icon.png") no-repeat scroll 7px 7px;
        }

        .confirm {
            background-color: #1BAF8F;
            width: 20%;
            border: none;
            padding-right: 15px;
            padding-left: 15px;
            margin-top: 1%;
            cursor: pointer;
            &:hover {
                background-color: #17997D;
                color: #FFF;
            }
        }
    }

    @media all and (max-width: 1980px) {
        .container {
            height: 200px;
        }
    }

    @media all and (max-width: 1200px) {
        .container {
            height: 200px;
        }
    }    

    @media all and (max-width: 480px) {
        .container {
            height: 200px;
        }
        .signup {
            input {
                width: 55%;
            }
            .confirm {
                width: 55%;                
            }
        }
    }
}

